--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
+<link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
+<link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <section>
     <div id="banner-container">
         <div id="banner">
             <div class="bannner-content">
-                <h1>From Southeast Asia <br><span>to the World</span></h1>
+                <h1>From Southeast Asia <span>to the World</span></h1>
                 <p>Stay updated with travel tips, recommendations, and latest promos.</p>
                 <div>
                     <button class="btn">Get Started</button>
@@ -60,7 +65,7 @@
             <div id="stories">
             <div class="head-content">
                 <h4>BEST OF ASIA</h4>
-                <h2>Explore the top spots of Asis</h2>
+                <h2>Explore the top spots of Asia</h2>
                  </div>
                  <div class="story-card">
                     <img src="images/chaina-wall.png" alt="">
@@ -99,6 +104,60 @@
                  </div>
             </div>
        </div>
+    </section>
+    <section>
+         <div id="review-container">
+            <div id="review">
+            <div class="head-content">
+                <h4>COUNTRIES WE COVER</h4>
+                <h2>Explore all the countries in Asia</h2>
+                 </div>
+                 <div class="review-box-1">
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas optio eaque facilis expedita tenetur. Tempora sequi ad sapiente,Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque assumenda exercitationem, voluptate sint impedit tempora! Nam, natus quisquam placeat accusantium excepturi quas animi adipisci, accusamus voluptatum ipsum, exercitationem sed architecto. nobis facere accusantium laborum, maiores labore perspiciatis possimus nam optio quaerat omnis."</p>
+                    <div class="review-star">
+                    <div class="reviewer">
+                    <h4>Ferdous Zihad</h4>
+                    <p>Software Engineer (L1)-Programming</p>
+                    </div>
+                    <div class="star">
+                        <img src="images/star-reviews.png" alt="">
+                    </div>
+                    </div>
+
+                 </div>
+                 <div class="review-box-1">
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas optio eaque facilis expedita tenetur. Tempora sequi ad sapiente,Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque assumenda exercitationem, voluptate sint impedit tempora! Nam, natus quisquam placeat accusantium excepturi quas animi adipisci, accusamus voluptatum ipsum, exercitationem sed architecto. nobis facere accusantium laborum, maiores labore perspiciatis possimus nam optio quaerat omnis."</p>
+                    <div class="review-star">
+                    <div class="reviewer">
+                    <h4>Ferdous Zihad</h4>
+                    <p>Software Engineer (L1)-Programming</p>
+                    </div>
+                    <div class="star">
+                        <img src="images/star-reviews.png" alt="">
+                    </div>
+                    </div>
+
+                 </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <footer>
+            <div class="footer-container">
+                <div id="footer">
+            <div>
+            <p><i class="ri-copyright-line"></i>ferdous Zihad ,All Right Reserved</p>
+            </div>
+            <div class="footer-icon">
+                <i class="ri-facebook-line"></i>
+                <i class="ri-twitter-line"></i>
+                <i class="ri-instagram-line"></i>
+            </div>
+
+            </div>
+            </div>
+
+        </footer>
     </section>
 </body>
 </html>
