--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
                     <button class="btn">Book Now</button>
                     </div>
                  </div>
+                 <div class="story-card">
+                    <img src="images/coxs-bazar.png" alt="">
+
+                    <div class="story-card-content">
+                    <h2>
+                       Largest Sea Beach in the World
+                    </h2>
+                    <img src="images/bangladesh.png" alt="">
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn">Book Now</button>
+                    </div>
+                 </div>
             </div>
         </div>
     </section>
@@ -98,6 +111,8 @@
                       <h2>CHINA</h2>
                       <h2>JAPAN</h2>
                       <h2>NEPAL</h2>
+                      <h2>Turky</h2>
+                      
                  </div>
                  <div class="explore-btn">
                  <button class="btn">Explore Now</button>
